--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ nav > div > div > div > div > a:active {
 }
 
 .card1-flex {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
